--- a/assignemnt3/code/aco_hyperparameter_tuning.ipynb
+++ b/assignemnt3/code/aco_hyperparameter_tuning.ipynb
@@ -140,7 +140,7 @@
     "# Option 1: Continue existing study - set CONTINUE_STUDY to the study name\n",
     "# Example: CONTINUE_STUDY = 'aco_study_tiny_dataset_20251129_172927'\n",
     "# Option 2: Start new study - set CONTINUE_STUDY = None\n",
-    "CONTINUE_STUDY = \"aco_study_tiny_dataset_20251129_220412\"  # Set to study name to continue, or None for new study\n",
+    "CONTINUE_STUDY = None  # Set to study name to continue, or None for new study\n",
     "\n",
     "# Study name (used for new studies or when CONTINUE_STUDY is None)\n",
     "if CONTINUE_STUDY:\n",
@@ -516,7 +516,7 @@
     "    ('comparison_avg_colors.png', 'Average Color Count Comparison (with Std Dev)'),\n",
     "    ('comparison_execution_time.png', 'Execution Time Comparison (log scale)'),\n",
     "    ('comparison_conflicts.png', 'Conflict Count Comparison'),\n",
-    "    ('comparison_deviation_from_bks.png', 'Deviation from Best Known Solutions (%)')\n",
+    "    ('comparison_deviation_from_bks.png', 'Deviation from Best Known Solutions - Line Plot (%)')\n",
     "]\n",
     "\n",
     "print(\"Algorithm Comparison Metrics:\")\n",
