--- a/assignemnt3/code/aco_hyperparameter_tuning.ipynb
+++ b/assignemnt3/code/aco_hyperparameter_tuning.ipynb
@@ -507,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display algorithm comparison plots (5 comparison metrics)\n",
+    "# Display algorithm comparison plots (4 comparison metrics)\n",
     "from IPython.display import Image\n",
     "\n",
     "# Define all comparison plots\n",
@@ -515,8 +515,7 @@
     "    ('comparison_best_colors.png', 'Best Color Count Comparison (with Best Known Solutions)'),\n",
     "    ('comparison_avg_colors.png', 'Average Color Count Comparison (with Std Dev)'),\n",
     "    ('comparison_execution_time.png', 'Execution Time Comparison (log scale)'),\n",
-    "    ('comparison_conflicts.png', 'Conflict Count Comparison'),\n",
-    "    ('comparison_deviation_from_bks.png', 'Deviation from Best Known Solutions - Line Plot (%)')\n",
+    "    ('comparison_conflicts.png', 'Conflict Count Comparison')\n",
     "]\n",
     "\n",
     "print(\"Algorithm Comparison Metrics:\")\n",
