--- a/assignemnt3/code/aco_hyperparameter_tuning.ipynb
+++ b/assignemnt3/code/aco_hyperparameter_tuning.ipynb
@@ -160,7 +160,7 @@
     "PARAM_CONFIG = {\n",
     "    'iterations': {\n",
     "        'type': 'int',\n",
-    "        'low': 50,\n",
+    "        'low': 10,\n",
     "        'high': 200,\n",
     "    },\n",
     "    'alpha': {\n",
@@ -175,7 +175,7 @@
     "    },\n",
     "    'rho': {\n",
     "        'type': 'float',\n",
-    "        'low': 0.01,\n",
+    "        'low': 0.001,\n",
     "        'high': 0.5,\n",
     "    },\n",
     "    'ant_count': {\n",
@@ -187,6 +187,11 @@
     "        'type': 'float',\n",
     "        'low': 0.1,\n",
     "        'high': 10.0,\n",
+    "    },\n",
+    "    'patience': {\n",
+    "        'type': 'float',\n",
+    "        'low': 0.1,\n",
+    "        'high': 0.3,\n",
     "    }\n",
     "}\n",
     "\n",
@@ -425,7 +430,8 @@
     "    'beta': best_params['beta'],\n",
     "    'rho': best_params['rho'],\n",
     "    'ant_count': int(best_params['ant_count']),\n",
-    "    'Q': best_params['Q']\n",
+    "    'Q': best_params['Q'],\n",
+    "    'patience': best_params['patience']\n",
     "}\n",
     "\n",
     "print(\"\\nACO Parameters for Testing (from best trial):\")\n",
