--- a/assignemnt3/code/aco_hyperparameter_tuning.ipynb
+++ b/assignemnt3/code/aco_hyperparameter_tuning.ipynb
@@ -140,7 +140,7 @@
     "# Option 1: Continue existing study - set CONTINUE_STUDY to the study name\n",
     "# Example: CONTINUE_STUDY = 'aco_study_tiny_dataset_20251129_172927'\n",
     "# Option 2: Start new study - set CONTINUE_STUDY = None\n",
-    "CONTINUE_STUDY = None  # Set to study name to continue, or None for new study\n",
+    "CONTINUE_STUDY = \"aco_study_tiny_dataset_20251130_021829\"  # Set to study name to continue, or None for new study\n",
     "\n",
     "# Study name (used for new studies or when CONTINUE_STUDY is None)\n",
     "if CONTINUE_STUDY:\n",
@@ -151,7 +151,7 @@
     "    print(f\"Creating new study: {STUDY_NAME}\")\n",
     "\n",
     "# Number of Optuna trials for hyperparameter tuning\n",
-    "N_TRIALS = 5\n",
+    "N_TRIALS = 10\n",
     "\n",
     "# ACO verbose setting \n",
     "ACO_VERBOSE = False   # Set to True to see detailed ACO progress\n",
