--- a/assignemnt3/code/aco_hyperparameter_tuning.ipynb
+++ b/assignemnt3/code/aco_hyperparameter_tuning.ipynb
@@ -134,13 +134,13 @@
    "outputs": [],
    "source": [
     "# Dataset selection: 'tiny_dataset' for quick testing, 'main_dataset' for full experiments\n",
-    "DATASET_NAME = 'tiny_dataset'  # Change to 'main_dataset' for full tuning\n",
+    "DATASET_NAME = 'main_dataset'  # Change to 'main_dataset' for full tuning\n",
     "\n",
     "# Study continuation mode\n",
     "# Option 1: Continue existing study - set CONTINUE_STUDY to the study name\n",
     "# Example: CONTINUE_STUDY = 'aco_study_tiny_dataset_20251129_172927'\n",
     "# Option 2: Start new study - set CONTINUE_STUDY = None\n",
-    "CONTINUE_STUDY = \"aco_study_tiny_dataset_20251130_021829\"  # Set to study name to continue, or None for new study\n",
+    "CONTINUE_STUDY = None  # Set to study name to continue, or None for new study\n",
     "\n",
     "# Study name (used for new studies or when CONTINUE_STUDY is None)\n",
     "if CONTINUE_STUDY:\n",
@@ -151,7 +151,10 @@
     "    print(f\"Creating new study: {STUDY_NAME}\")\n",
     "\n",
     "# Number of Optuna trials for hyperparameter tuning\n",
-    "N_TRIALS = 10\n",
+    "N_TRIALS = 100\n",
+    "\n",
+    "# Number of random exploration trials before optimization starts\n",
+    "N_STARTUP_TRIALS = 5\n",
     "\n",
     "# ACO verbose setting \n",
     "ACO_VERBOSE = False   # Set to True to see detailed ACO progress\n",
@@ -199,6 +202,7 @@
     "print(f\"  Dataset: {DATASET_NAME}\")\n",
     "print(f\"  Study Name: {STUDY_NAME}\")\n",
     "print(f\"  Optuna Trials: {N_TRIALS}\")\n",
+    "print(f\"  Random Exploration Trials: {N_STARTUP_TRIALS} (before optimization)\")\n",
     "print(f\"\\nHyperparameters to Optimize:\")\n",
     "for param_name, param_spec in PARAM_CONFIG.items():\n",
     "    print(f\"  {param_name}: [{param_spec['low']}, {param_spec['high']}] ({param_spec['type']})\")"
