--- a/assignemnt3/code/aco_hyperparameter_tuning.ipynb
+++ b/assignemnt3/code/aco_hyperparameter_tuning.ipynb
@@ -140,7 +140,7 @@
     "# Option 1: Continue existing study - set CONTINUE_STUDY to the study name\n",
     "# Example: CONTINUE_STUDY = 'aco_study_tiny_dataset_20251129_172927'\n",
     "# Option 2: Start new study - set CONTINUE_STUDY = None\n",
-    "CONTINUE_STUDY = None  # Set to study name to continue, or None for new study\n",
+    "CONTINUE_STUDY = \"aco_study_main_dataset_20251130_030716\"  # Set to study name to continue, or None for new study\n",
     "\n",
     "# Study name (used for new studies or when CONTINUE_STUDY is None)\n",
     "if CONTINUE_STUDY:\n",
@@ -163,8 +163,8 @@
     "PARAM_CONFIG = {\n",
     "    'iterations': {\n",
     "        'type': 'int',\n",
-    "        'low': 10,\n",
-    "        'high': 200,\n",
+    "        'low': 100,\n",
+    "        'high': 500,\n",
     "    },\n",
     "    'alpha': {\n",
     "        'type': 'float',\n",
@@ -184,7 +184,7 @@
     "    'ant_count': {\n",
     "        'type': 'int',\n",
     "        'low': 10,\n",
-    "        'high': 50,\n",
+    "        'high': 100,\n",
     "    },\n",
     "    'Q': {\n",
     "        'type': 'float',\n",
@@ -194,7 +194,7 @@
     "    'patience': {\n",
     "        'type': 'float',\n",
     "        'low': 0.1,\n",
-    "        'high': 0.3,\n",
+    "        'high': 0.30,\n",
     "    }\n",
     "}\n",
     "\n",
@@ -219,7 +219,8 @@
     "tuner = OptunaACOTuner(\n",
     "    study_name=STUDY_NAME,\n",
     "    data_root=str(DATA_ROOT),\n",
-    "    direction='minimize'  # We want to minimize the number of colors used\n",
+    "    direction='minimize',  # We want to minimize the number of colors used\n",
+    "    n_startup_trials=N_STARTUP_TRIALS  # Number of random trials before optimization\n",
     ")\n",
     "\n",
     "print(f\"Tuner initialized with study: {STUDY_NAME}\")\n",
@@ -228,17 +229,18 @@
     "# Load tuning dataset once (before optimization)\n",
     "print(\"\\nLoading tuning dataset...\")\n",
     "data_loader = GraphDataLoader(str(DATA_ROOT), DATASET_NAME)\n",
-    "tuning_graphs = data_loader.load_tuning_dataset()\n",
+    "tuning_graphs, tabu_best_values = data_loader.load_tuning_dataset()\n",
     "print(f\"Loaded {len(tuning_graphs)} graphs for tuning\\n\")\n",
     "\n",
-    "# Wrapper function to pass tuning graphs to objective function\n",
+    "# Wrapper function to pass tuning graphs and tabu best values to objective function\n",
     "def objective_wrapper(trial, params, **kwargs):\n",
     "    return aco_objective_function(\n",
     "        trial=trial,\n",
     "        params=params,\n",
     "        tuning_graphs=tuning_graphs,\n",
     "        aco_class=ACOGraphColoring,\n",
-    "        verbose=ACO_VERBOSE\n",
+    "        verbose=ACO_VERBOSE,\n",
+    "        tabu_best_values=tabu_best_values\n",
     "    )\n",
     "\n",
     "print(\"Objective function wrapper ready!\")"
