--- a/assignemnt3/code/aco_hyperparameter_tuning.ipynb
+++ b/assignemnt3/code/aco_hyperparameter_tuning.ipynb
@@ -134,13 +134,13 @@
    "outputs": [],
    "source": [
     "# Dataset selection: 'tiny_dataset' for quick testing, 'main_dataset' for full experiments\n",
-    "DATASET_NAME = 'main_dataset'  # Change to 'main_dataset' for full tuning\n",
+    "DATASET_NAME = 'tiny_dataset'  # Change to 'main_dataset' for full tuning\n",
     "\n",
     "# Study continuation mode\n",
     "# Option 1: Continue existing study - set CONTINUE_STUDY to the study name\n",
     "# Example: CONTINUE_STUDY = 'aco_study_tiny_dataset_20251129_172927'\n",
     "# Option 2: Start new study - set CONTINUE_STUDY = None\n",
-    "CONTINUE_STUDY = \"aco_study_main_dataset_20251130_030716\"  # Set to study name to continue, or None for new study\n",
+    "CONTINUE_STUDY = None  # Set to study name to continue, or None for new study\n",
     "\n",
     "# Study name (used for new studies or when CONTINUE_STUDY is None)\n",
     "if CONTINUE_STUDY:\n",
@@ -151,10 +151,10 @@
     "    print(f\"Creating new study: {STUDY_NAME}\")\n",
     "\n",
     "# Number of Optuna trials for hyperparameter tuning\n",
-    "N_TRIALS = 100\n",
+    "N_TRIALS = 10\n",
     "\n",
     "# Number of random exploration trials before optimization starts\n",
-    "N_STARTUP_TRIALS = 5\n",
+    "N_STARTUP_TRIALS = 2\n",
     "\n",
     "# ACO verbose setting \n",
     "ACO_VERBOSE = False   # Set to True to see detailed ACO progress\n",
@@ -240,7 +240,8 @@
     "        tuning_graphs=tuning_graphs,\n",
     "        aco_class=ACOGraphColoring,\n",
     "        verbose=ACO_VERBOSE,\n",
-    "        tabu_best_values=tabu_best_values\n",
+    "        tabu_best_values=tabu_best_values,\n",
+    "        n_startup_trials=N_STARTUP_TRIALS\n",
     "    )\n",
     "\n",
     "print(\"Objective function wrapper ready!\")"
@@ -269,7 +270,8 @@
     "    objective_func=objective_wrapper,\n",
     "    param_config=PARAM_CONFIG,\n",
     "    aco_class=ACOGraphColoring,\n",
-    "    n_trials=N_TRIALS\n",
+    "    n_trials=N_TRIALS,\n",
+    "    n_jobs=6\n",
     ")\n",
     "\n",
     "print(\"\\n\" + \"=\" * 70)\n",
