--- a/assignemnt3/code/aco_hyperparameter_tuning.ipynb
+++ b/assignemnt3/code/aco_hyperparameter_tuning.ipynb
@@ -147,7 +147,7 @@
    "outputs": [],
    "source": [
     "# Dataset selection: 'tiny_dataset' for quick testing, 'main_dataset' for full experiments\n",
-    "DATASET_NAME = 'limited_dataset'  # Change to 'main_dataset' for full tuning\n",
+    "DATASET_NAME = 'tiny_dataset'  # Change to 'main_dataset' for full tuning\n",
     "\n",
     "# Study continuation mode\n",
     "# Option 1: Continue existing study - set CONTINUE_STUDY to the study name\n",
@@ -164,7 +164,7 @@
     "    print(f\"Creating new study: {STUDY_NAME}\")\n",
     "\n",
     "# Number of Optuna trials for hyperparameter tuning\n",
-    "N_TRIALS = 30\n",
+    "N_TRIALS = 5\n",
     "\n",
     "# Number of random exploration trials before optimization starts\n",
     "N_STARTUP_TRIALS = 4\n",
