--- a/assignemnt3/report3.tex
+++ b/assignemnt3/report3.tex
@@ -131,7 +131,7 @@ The \textbf{Graph Coloring Problem (GCP)} is formally defined for an undirected 
  
 \section{Methodology (P-metaheuristic)}
 
-This report implements a \textbf{population-based metaheuristic} (Ant Colony Optimization) to address the computational complexity of the GCP. ACO leverages collective intelligence of multiple agents to explore the solution space through constructive pheromone-guided building of solutions. The results are compared against two baseline algorithms: \textbf{Greedy} (simple constructive heuristic) and \textbf{Tabu Search} (single-solution metaheuristic from Assignment 2).
+This report implements a \textbf{population-based metaheuristic} (Ant Colony Optimization) to address the computational complexity of the GCP. ACO leverages collective intelligence of multiple agents to explore the solution space through constructive pheromone-guided building of solutions.
 
 \subsection{Ant Colony Optimization (ACO)}
 \textbf{Ant Colony Optimization (ACO)} is a nature-inspired population-based metaheuristic that mimics the foraging behavior of ants, which deposit pheromone trails to guide other ants toward good solutions \cite{Bessedik2005}. Unlike improvement-based methods like Tabu Search, ACO employs multiple artificial ants that work in parallel to construct complete solutions from scratch, eliminating dependency on initial solution quality.
@@ -435,7 +435,7 @@ Each algorithm was executed 3 times per instance to assess statistical robustnes
 
 
 \section{Results and Discussion}
-
+ The results are compared against two baseline algorithms: \textbf{Greedy} (simple constructive heuristic) and \textbf{Tabu Search} (single-solution metaheuristic from Assignment 2).
 \subsection{Performance Metrics}
 Performance is evaluated using:
 \begin{itemize}
